--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -860,6 +860,16 @@ section,
   color: rgba(255, 255, 255, 0.8);
 }
 
+.portfolio .portfolio-content .portfolio-info .preview-link1 {
+  position: absolute;
+  left: 46%;
+  font-size: 26px;
+  top: 45%;
+  color: #fff;
+  transition: 0.3s;
+  line-height: 1.2;
+}
+
 .portfolio .portfolio-content .portfolio-info .preview-link,
 .portfolio .portfolio-content .portfolio-info .details-link {
   position: absolute;
@@ -870,6 +880,8 @@ section,
   transition: 0.3s;
   line-height: 1.2;
 }
+
+
 
 .portfolio .portfolio-content .portfolio-info .preview-link:hover,
 .portfolio .portfolio-content .portfolio-info .details-link:hover {
