--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -45,7 +45,7 @@
 }
 
 .dark-background {
-  --background-color: #040b14;
+  --background-color: #334e6b;
   --default-color: #ffffff;
   --heading-color: #ffffff;
   --surface-color: #151f2b;
